# hermes-web-panel

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  start.sh
apps/server/src/hermes_admin_server/: __init__.py  main.py
apps/server/src/hermes_admin_server/routes/: __init__.py  hermes.py  meta.py
apps/server/tests/: test_channels.py  test_env.py  test_gateway.py  test_health.py  test_profiles.py  test_registry.py  test_shared_china_registry.py  test_workspace.py
apps/web/: README.md  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
apps/web/src/: App.tsx
apps/web/src/test/: smoke.test.ts
